exports[`server side render should pass failure when data load fails 1`] = `
Object {
  "errorMessage": "Boom!",
  "isCompleted": true,
  "isError": true,
  "isLoaded": false,
  "isLoading": false,
  "renderCount": 3,
}
`;

exports[`server side render should pass failure when data load fails 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "attachedComponents": 0,
          "completed": true,
          "dataFromServerSideRender": true,
          "error": "Boom!",
          "failed": true,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should pass loaded data once promise resolves 1`] = `
Object {
  "data": Object {
    "result": "Success!",
  },
  "isCompleted": true,
  "isError": false,
  "isLoaded": true,
  "isLoading": false,
  "renderCount": 3,
}
`;

exports[`server side render should pass loaded data once promise resolves 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "attachedComponents": 0,
          "completed": true,
          "data": Object {
            "result": "Success!",
          },
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`server side render should start loading data if not loaded 1`] = `
Object {
  "isCompleted": false,
  "isError": false,
  "isLoaded": false,
  "isLoading": true,
  "renderCount": 2,
}
`;

exports[`server side render should start loading data if not loaded 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "attachedComponents": 0,
          "completed": false,
          "dataFromServerSideRender": true,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 1,
  },
}
`;
